# traitor

./: .editorconfig  .gitignore  README.md  __init__.py  app.py  pyproject.toml
cdk/: cdk_stack.py
data/symbols/: amex.csv  nasdaq.csv  nyse.csv
lambda/: __init__.py  hello.py
lambda/data/: __init__.py
lambda/data/store/: BarsDataStore.py  PandasBarsDataStore.py  __init__.py  api_client.py
lmbda/: __init__.py  hello.py
lmbda/data/: __init__.py
lmbda/data/store/: BarsDataStore.py  PandasBarsDataStore.py  __init__.py
lmbda/labellers/: constant_fraction_discrimination.py
lmbda/store/: PandasBarsDataStore.py  __init__.py
lmbda/training/: download_all_symbols.py  exploration.ipynb
notebooks/: exploration.ipynb
scripts/: download_all_symbols.py
