[tool.poetry]
name = "traitor"
version = "0.1.0"
description = "Auto trader program built for AWS + Alpaca"
authors = ["Sourec <tothemyers@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
"aws-cdk.core" = "^1.100.0"
"aws-cdk.aws-dynamodb" = "^1.100.0"
"aws-cdk.aws-s3" = "^1.100.0"
"aws-cdk.aws-lambda" = "^1.100.0"
"aws-cdk.aws-apigateway" = "^1.100.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
